test/errors/traits/missing_instance_members/main.sk
module Main {

struct Foo {

}

protocol Bar[T] {
    fn bar(self) -> ()
    fn baz(self) -> ()
    fn baq(self) -> ()
    fn baf(self) -> () {

    }
}

impl BarImpl Bar[Foo] {
    fn bar(self) -> () {

    }
}

fn main() {
}

}